# NPL-mini-project

./: Linguistic_Distance_Reports.csv  README.md  classifier.py  clean_rambam.py  gerunds-with-suffix.txt  gerunds.txt  main.py  pyproject.toml  requirements.txt
InputFiles/bibal/: a.txt  d.txt  tt.xml
InputFiles/hazal/mishna/: b.txt
InputFiles/hazal/rambam/: c.txt
InputFiles/modern/: a.txt  c.txt
InputFiles/modern/test/: t.txt
JsonFiles/bibal/: 0a.json  0d.json  0tt.json  1a.json  1tt.json  2tt.json
JsonFiles/hazal/mishna/: 0b.json  1b.json  2b.json
JsonFiles/hazal/rambam/: 0c.json  1c.json
JsonFiles/modern/: 0a.json
JsonFiles/modern/test/: 0t.json
