
[tool.poetry]
name = "dictabert-starter"
version = "0.1.0"
description = "Starter project using Hugging Face Transformers with DictaBERT-tiny-joint"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
transformers = ">=4.41.0"
torch = ">=2.1.0"
huggingface_hub = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
